# SoundADE

./: .env.template  .gitignore  CITATION.cff  Dockerfile  README.md  app.def  docker-compose.yaml  environment.yml  main.py  pipeline-steps.sh  pipeline.def  pyproject.toml  pytest.ini  requirements.txt  run-pipeline.sh  run-singularity.sh  run.sh  settings-astrogram.env  settings-full.env  settings-histogram.env  settings-metadata.env  settings-spectrograms.env  settings.env  soundade-environment.def
.devcontainer/: devcontainer.json
config/: cairngorms.yaml  cairngorms.yml  kilpisjarvi.yaml  kilpisjarvi.yml  nature_sense.yaml  sounding_out.yaml  sounding_out.yml  sounding_out_chorus.yaml  sounding_out_chorus.yml  wilding_radio.yaml  wilding_radio.yml
data/ecolistening/: site_locations.parquet
data/environments/: environment-deployment.yml  environment-development.yml
doc/src/: soundade-process-files.puml  soundade-top-level.puml
profiles/: 24h  Kilpisjarvi  NatureSense  SoundingOutDiurnal  SoundingOutDiurnal.env  full_ba11  single  small
profiles/artemis/: single  small
profiles/local/: single  small  twochannel
profiles/singularity/: single
scripts/: append_metadata.py  astrograms.py  lempel_ziv_complexity.py  prefilter.py  process_files.py  summary_stats.py  to_long.py
slurm/: build-soundade-environment.sh  build-soundade-pipeline.sh  build.sh  pipeline.sh  schedule-pipeline.sh
slurm/jobs/: build.job  pipeline.job
src/cli/: acoustic_features.py  astrograms.py  birdnet_detections.py  birdnet_embeddings.py  birdnet_species.py  index_audio.py  index_sites.py  index_solar.py  index_weather.py  lempel_ziv_complexity.py  mp3_to_wav.py  pipeline.py
src/soundade/: utils.py
src/soundade/audio/: binarisation.py  birdnet.py  filter.py  lempel_ziv.py  symbolisation.py
src/soundade/data/: bag.py  dataset.py  datasets.py  filter.py  good_dates_and_mics.parquet  metadata.py  solar.py  split.py
src/soundade/datasets/: __init__.py  base.py  cairngorms.py  kilpisjarvi.py  nature_sense.py  reef_chorus.py  sounding_out.py  sounding_out_chorus.py  sounding_out_diurnal.py  wilding_radio.py  wildlife_acoustics.py
test/: conftest.py
test/data/: test_bag.py
test/fixtures/: actual_indices.parquet  audio_params.yml  expected_indices  expected_indices.parquet  fft_params.yml  indices.parquet  seewave_indices.parquet  test_config.yaml
test/helpers/: indices.R  seewave.R  soundecology.R
(+16 files in other folders)
