[project]
name="soundade"
version="0.0.1"
description="soundade library files"
readme="README.md"
authors=[
    {name = "David Kadish", email = "david.kadish@mau.se"},
    {name = "Nicolas Seymour-Smith", email = "nrs23@sussex.ac.uk"},
    {name = "Kieran Gibb", email = "k.a.gibb@sussex.ac.uk"},
]
requires-python = ">=3.10"
dependencies = [
    "astral==3.2",
    "audioread==3.0.1",
    "birdnetlib>=0.18.0",
    "bokeh>=3.7.3",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "colorednoise==2.2.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dask==2025.5.1",
    "dask-jobqueue==0.8.5",
    "decorator==5.2.1",
    "distributed==2025.5.1",
    "findiff==0.12.1",
    "fonttools==4.58.2",
    "fsspec==2025.5.1",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "lempel-ziv-complexity==0.2.2",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "locket==1.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multiformats>=0.3.1.post4",
    "networkx==3.4.2",
    "numba==0.61.2",
    "openmeteo-requests>=1.7.1",
    "packaging==25.0",
    "pandas==2.3.0",
    "pandas-path==0.3.0",
    "partd==1.4.2",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pooch==1.8.2",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "requests-cache>=1.2.1",
    "resampy==0.4.3",
    "retry-requests>=2.0.0",
    "scikit-image==0.25.2",
    "scikit-maad==1.4.3",
    "scipy==1.15.3",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "sympy==1.14.0",
    "tblib==3.1.0",
    "tensorflow==2.15.1",
    "threadpoolctl==3.6.0",
    "tifffile==2025.5.10",
    "toolz==1.0.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "tqdm-joblib==0.0.4",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "zict==3.0.0",
    "zipp==3.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/test"]
